Fix size of pull alignment on smaller viewports

--- a/src/assets/styles/helpers/align.css
+++ b/src/assets/styles/helpers/align.css
@@ -41,7 +41,7 @@
 }
 
 /* Pull alignment */
-@media (--from-smallest-viewport) {
+@media (--from-small-viewport) {
   .align-pull {
     --section-space: 0;
     float: inline-end;
